# cpp-dp-tdd-dezember-2023

./: README.md
design-pattern/Builder/: CMakeLists.txt  main.cpp
design-pattern/Builder/builder/: Person.cpp  Person.h
design-pattern/Command/: CMakeLists.txt  main.cpp
design-pattern/Command/command/: AbstractCommand.h  AddCommand.h  ClearCommand.h  Command.h  CommandFactory.h  CommandHistory.h  PrintCommand.h
design-pattern/Command/math/: Calculator.h  CalculatorMemento.h
design-pattern/CompositeWithCustomIterator/: CMakeLists.txt  main.cpp
design-pattern/CompositeWithCustomIterator/src/composite/: abstract_node.h  leaf.h  node.h
design-pattern/DecoratorFactory/: CMakeLists.txt  main.cpp
design-pattern/DecoratorFactory/client/: CalculatorClient.h
design-pattern/DecoratorFactory/math/: Calculator.h  CalculatorBenchmark.h  CalculatorFactory.h  CalculatorImpl.h  CalculatorLogger.h
design-pattern/ObserverAdapter/: CMakeLists.txt  main.cpp
design-pattern/ObserverAdapter/tiere/: Schwein.h  Tier.h
design-pattern/ObserverMitObservable/: CMakeLists.txt  main.cpp
design-pattern/ObserverMitObservable/propertychanged/: PropertyChangedEvent.h  PropertyChangedListener.h  PropertyChangedProvider.h
design-pattern/ObserverMitObservable/tiere/: Schwein.h
design-pattern/SimpleFlyweight/: AttributedCharacter.h  CMakeLists.txt  main.cpp
design-pattern/SingletonWithSmartpointer/: CMakeLists.txt  Singleton.h  main.cpp
design-pattern/StatePattern/: CMakeLists.txt  main.cpp
design-pattern/StatePattern/trafficlight/: TrafficLight.cpp  TrafficLight.h
design-pattern/StatePattern/trafficlight/states/: AbstractTrafficLightState.h  GreenState.h  RedState.h  TrafficLightState.h
design-pattern/Template/: CMakeLists.txt  main.cpp
design-pattern/Template/data/: blind.txt
design-pattern/Template/processor/: FileProcessor.h
design-pattern/Template/processor/handler/: AbstractCounter.h  AbstractFileHandler.h  CharacterCounter.h  FileHandler.h
design-pattern/Visitor/: CMakeLists.txt  main.cpp
design-pattern/Visitor/firma/: Firma.h
design-pattern/Visitor/mitarbeiter/: AbstractMitarbeiter.h  GehaltsEmpfaenger.h  LohnEmpfaenger.h
design-pattern/Visitor/mitarbeiter/visitor/: AbstractMitarbeiterVisitor.h  MitarbeiterVisitor.h  PrintVisitor.h  ResetArbeitszeitVisitor.h
unit-testing/BlankCMakeProjects/BlankCMakeProjekt_subdirectory/tests/: CMakeLists.txt
unit-testing/BlankCMakeProjects/Blank_c++14/tests/: CMakeLists.txt
unit-testing/FakeDemo/: CMakeLists.txt  my_service_using_dependency.h
unit-testing/FakeDemo/tests/: CMakeLists.txt  globaltest.cpp  globaltest.h  myservice_using_dependency_test.cpp  myservice_using_dependency_test.h
unit-testing/FakeDemo/tests/gmock-global/: gock-global.h
unit-testing/ParameterTestProjekt/: CMakeLists.txt
unit-testing/ParameterTestProjekt/source/: main.cpp
unit-testing/ParameterTestProjekt/source/games/take_game/io/: Writer.h
unit-testing/ParameterTestProjekt/source/games/take_game/players/: computer_player.h
unit-testing/ParameterTestProjekt/tests/: CMakeLists.txt
unit-testing/ParameterTestProjekt/tests/games/take_game/players/: computer_player_test.cpp  computer_player_test.h
unit-testing/PersonenServiceProjekt/: CMakeLists.txt
unit-testing/PersonenServiceProjekt/source/persistence/: person.h  personen_repository.h
unit-testing/PersonenServiceProjekt/source/services/: BlacklistService.h  personen_service_exception.h  personen_service_impl.h
unit-testing/PersonenServiceProjekt/tests/: CMakeLists.txt  MockBlacklistService.h  Mockpersonen_repository.h
unit-testing/PersonenServiceProjekt/tests/services/: personen_service_impl_test.cpp  personen_service_impl_test.h
unit-testing/QT6EuroToDollarCalculator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
unit-testing/QT6EuroToDollarCalculator/source/presenter/: euro_to_dollar_presenter.h  euro_to_dollar_presenter_impl.h
unit-testing/QT6EuroToDollarCalculator/source/services/: euro_to_dollar_calculator.h  euro_to_dollar_calculator_impl.h
unit-testing/QT6EuroToDollarCalculator/source/view/: euro_to_dollar_view.h
unit-testing/QT6EuroToDollarCalculator/tests/: CMakeLists.txt  Mockeuro_to_dollar_calculator.h  Mockeuro_to_dollar_view.h  Mockexchange_rate_service.h
unit-testing/QT6EuroToDollarCalculator/tests/presenter/: euro_to_dollar_presenter_impl_test.cpp  euro_to_dollar_presenter_impl_test.h
unit-testing/QT6EuroToDollarCalculator/tests/services/: euro_to_dollar_impl_test.cpp  euro_to_dollar_impl_test.h
unit-testing/SimpleMockUsingReference/source/: Dependency.h  Service.h
unit-testing/SimpleMockUsingReference/tests/: DependencyMock.h  ServiceTest.cpp  ServiceTest.h
unit-testing/SimpleMockUsingSmartPointer/: CMakeLists.txt
unit-testing/SimpleMockUsingSmartPointer/source/: Service.h
unit-testing/SimpleMockUsingSmartPointer/tests/: CMakeLists.txt  ServiceTest.cpp  ServiceTest.h
unit-testing/Tag1_02SchweineProjekt/: CMakeLists.txt
unit-testing/Tag1_02SchweineProjekt/source/: Schwein.cpp  Schwein.h  Stapel.cpp  Stapel.h
unit-testing/Tag1_02SchweineProjekt/tests/: CMakeLists.txt  SchweinTest.cpp  SchweinTest.h  StapelTest.cpp  StapelTest.h
